Fixed isseu area icons to align correctly in the footer. Making sure search typahead works.

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -797,7 +797,7 @@ div.col-md-4.transportation-choices.featured {
   width: 80px;
   height: 80px;
   margin: 20px 5px;
-  //float: left;
+  float: left;
   border-radius: 50%;
   padding-top: 20px;
 }
